[package]
name = "ipify-cli"
version = "0.1.0"
authors = ["dvvvvvv <dvvvvvv@dvvvvvv.com>"]
edition = "2018"
license = "MIT"
description = "a CLI command to check public IP"
repository = "https://github.com/dvvvvvv/ipify-cli"
readme = "README.md"
keywords = ["ipify", "ip", "cli"]
categories = ["command-line-utilities", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
hyper = "0.13.5"
hyper-tls = "0.4.1"
tokio = { version = "0.2.11", features = [ "macros" ] }

